--- a/Course Project/Amazon Sales Analysis.ipynb
+++ b/Course Project/Amazon Sales Analysis.ipynb
@@ -723,110 +723,110 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_89279_row0_col4, #T_89279_row3_col0, #T_89279_row3_col1, #T_89279_row3_col2, #T_89279_row3_col3 {\n",
+       "#T_b27de_row1_col3, #T_b27de_row2_col4, #T_b27de_row5_col2, #T_b27de_row6_col0, #T_b27de_row6_col1 {\n",
        "  background-color: #98d5e0;\n",
        "}\n",
-       "#T_89279_row1_col3, #T_89279_row7_col0, #T_89279_row7_col1, #T_89279_row7_col4, #T_89279_row8_col0, #T_89279_row8_col1, #T_89279_row8_col4, #T_89279_row9_col2 {\n",
+       "#T_b27de_row7_col4, #T_b27de_row8_col0, #T_b27de_row8_col1, #T_b27de_row8_col3, #T_b27de_row9_col2 {\n",
        "  background-color: #edb87e;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_89279\">\n",
+       "<table id=\"T_b27de\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_89279_level0_col0\" class=\"col_heading level0 col0\" >discounted_price</th>\n",
-       "      <th id=\"T_89279_level0_col1\" class=\"col_heading level0 col1\" >actual_price</th>\n",
-       "      <th id=\"T_89279_level0_col2\" class=\"col_heading level0 col2\" >discount_percentage</th>\n",
-       "      <th id=\"T_89279_level0_col3\" class=\"col_heading level0 col3\" >rating</th>\n",
-       "      <th id=\"T_89279_level0_col4\" class=\"col_heading level0 col4\" >rating_count</th>\n",
+       "      <th id=\"T_b27de_level0_col0\" class=\"col_heading level0 col0\" >discounted_price</th>\n",
+       "      <th id=\"T_b27de_level0_col1\" class=\"col_heading level0 col1\" >actual_price</th>\n",
+       "      <th id=\"T_b27de_level0_col2\" class=\"col_heading level0 col2\" >discount_percentage</th>\n",
+       "      <th id=\"T_b27de_level0_col3\" class=\"col_heading level0 col3\" >rating</th>\n",
+       "      <th id=\"T_b27de_level0_col4\" class=\"col_heading level0 col4\" >rating_count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_89279_level0_row0\" class=\"row_heading level0 row0\" >620</th>\n",
-       "      <td id=\"T_89279_row0_col0\" class=\"data row0 col0\" >399.000000</td>\n",
-       "      <td id=\"T_89279_row0_col1\" class=\"data row0 col1\" >1290.000000</td>\n",
-       "      <td id=\"T_89279_row0_col2\" class=\"data row0 col2\" >69</td>\n",
-       "      <td id=\"T_89279_row0_col3\" class=\"data row0 col3\" >4.200000</td>\n",
-       "      <td id=\"T_89279_row0_col4\" class=\"data row0 col4\" >206</td>\n",
+       "      <th id=\"T_b27de_level0_row0\" class=\"row_heading level0 row0\" >507</th>\n",
+       "      <td id=\"T_b27de_row0_col0\" class=\"data row0 col0\" >1989.000000</td>\n",
+       "      <td id=\"T_b27de_row0_col1\" class=\"data row0 col1\" >3500.000000</td>\n",
+       "      <td id=\"T_b27de_row0_col2\" class=\"data row0 col2\" >43</td>\n",
+       "      <td id=\"T_b27de_row0_col3\" class=\"data row0 col3\" >4.400000</td>\n",
+       "      <td id=\"T_b27de_row0_col4\" class=\"data row0 col4\" >67260</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_89279_level0_row1\" class=\"row_heading level0 row1\" >861</th>\n",
-       "      <td id=\"T_89279_row1_col0\" class=\"data row1 col0\" >199.000000</td>\n",
-       "      <td id=\"T_89279_row1_col1\" class=\"data row1 col1\" >499.000000</td>\n",
-       "      <td id=\"T_89279_row1_col2\" class=\"data row1 col2\" >60</td>\n",
-       "      <td id=\"T_89279_row1_col3\" class=\"data row1 col3\" >4.300000</td>\n",
-       "      <td id=\"T_89279_row1_col4\" class=\"data row1 col4\" >9998</td>\n",
+       "      <th id=\"T_b27de_level0_row1\" class=\"row_heading level0 row1\" >312</th>\n",
+       "      <td id=\"T_b27de_row1_col0\" class=\"data row1 col0\" >2699.000000</td>\n",
+       "      <td id=\"T_b27de_row1_col1\" class=\"data row1 col1\" >3500.000000</td>\n",
+       "      <td id=\"T_b27de_row1_col2\" class=\"data row1 col2\" >23</td>\n",
+       "      <td id=\"T_b27de_row1_col3\" class=\"data row1 col3\" >3.500000</td>\n",
+       "      <td id=\"T_b27de_row1_col4\" class=\"data row1 col4\" >621</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_89279_level0_row2\" class=\"row_heading level0 row2\" >522</th>\n",
-       "      <td id=\"T_89279_row2_col0\" class=\"data row2 col0\" >13999.000000</td>\n",
-       "      <td id=\"T_89279_row2_col1\" class=\"data row2 col1\" >15999.000000</td>\n",
-       "      <td id=\"T_89279_row2_col2\" class=\"data row2 col2\" >13</td>\n",
-       "      <td id=\"T_89279_row2_col3\" class=\"data row2 col3\" >3.900000</td>\n",
-       "      <td id=\"T_89279_row2_col4\" class=\"data row2 col4\" >2180</td>\n",
+       "      <th id=\"T_b27de_level0_row2\" class=\"row_heading level0 row2\" >1332</th>\n",
+       "      <td id=\"T_b27de_row2_col0\" class=\"data row2 col0\" >799.000000</td>\n",
+       "      <td id=\"T_b27de_row2_col1\" class=\"data row2 col1\" >1699.000000</td>\n",
+       "      <td id=\"T_b27de_row2_col2\" class=\"data row2 col2\" >53</td>\n",
+       "      <td id=\"T_b27de_row2_col3\" class=\"data row2 col3\" >4.000000</td>\n",
+       "      <td id=\"T_b27de_row2_col4\" class=\"data row2 col4\" >97</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_89279_level0_row3\" class=\"row_heading level0 row3\" >997</th>\n",
-       "      <td id=\"T_89279_row3_col0\" class=\"data row3 col0\" >39.000000</td>\n",
-       "      <td id=\"T_89279_row3_col1\" class=\"data row3 col1\" >39.000000</td>\n",
-       "      <td id=\"T_89279_row3_col2\" class=\"data row3 col2\" >0</td>\n",
-       "      <td id=\"T_89279_row3_col3\" class=\"data row3 col3\" >3.600000</td>\n",
-       "      <td id=\"T_89279_row3_col4\" class=\"data row3 col4\" >13572</td>\n",
+       "      <th id=\"T_b27de_level0_row3\" class=\"row_heading level0 row3\" >1097</th>\n",
+       "      <td id=\"T_b27de_row3_col0\" class=\"data row3 col0\" >2169.000000</td>\n",
+       "      <td id=\"T_b27de_row3_col1\" class=\"data row3 col1\" >3279.000000</td>\n",
+       "      <td id=\"T_b27de_row3_col2\" class=\"data row3 col2\" >34</td>\n",
+       "      <td id=\"T_b27de_row3_col3\" class=\"data row3 col3\" >4.100000</td>\n",
+       "      <td id=\"T_b27de_row3_col4\" class=\"data row3 col4\" >1716</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_89279_level0_row4\" class=\"row_heading level0 row4\" >1353</th>\n",
-       "      <td id=\"T_89279_row4_col0\" class=\"data row4 col0\" >8699.000000</td>\n",
-       "      <td id=\"T_89279_row4_col1\" class=\"data row4 col1\" >16899.000000</td>\n",
-       "      <td id=\"T_89279_row4_col2\" class=\"data row4 col2\" >49</td>\n",
-       "      <td id=\"T_89279_row4_col3\" class=\"data row4 col3\" >4.200000</td>\n",
-       "      <td id=\"T_89279_row4_col4\" class=\"data row4 col4\" >3195</td>\n",
+       "      <th id=\"T_b27de_level0_row4\" class=\"row_heading level0 row4\" >1429</th>\n",
+       "      <td id=\"T_b27de_row4_col0\" class=\"data row4 col0\" >1799.000000</td>\n",
+       "      <td id=\"T_b27de_row4_col1\" class=\"data row4 col1\" >2599.000000</td>\n",
+       "      <td id=\"T_b27de_row4_col2\" class=\"data row4 col2\" >31</td>\n",
+       "      <td id=\"T_b27de_row4_col3\" class=\"data row4 col3\" >3.600000</td>\n",
+       "      <td id=\"T_b27de_row4_col4\" class=\"data row4 col4\" >771</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_89279_level0_row5\" class=\"row_heading level0 row5\" >590</th>\n",
-       "      <td id=\"T_89279_row5_col0\" class=\"data row5 col0\" >217.000000</td>\n",
-       "      <td id=\"T_89279_row5_col1\" class=\"data row5 col1\" >237.000000</td>\n",
-       "      <td id=\"T_89279_row5_col2\" class=\"data row5 col2\" >8</td>\n",
-       "      <td id=\"T_89279_row5_col3\" class=\"data row5 col3\" >3.800000</td>\n",
-       "      <td id=\"T_89279_row5_col4\" class=\"data row5 col4\" >7354</td>\n",
+       "      <th id=\"T_b27de_level0_row5\" class=\"row_heading level0 row5\" >1260</th>\n",
+       "      <td id=\"T_b27de_row5_col0\" class=\"data row5 col0\" >4799.000000</td>\n",
+       "      <td id=\"T_b27de_row5_col1\" class=\"data row5 col1\" >5795.000000</td>\n",
+       "      <td id=\"T_b27de_row5_col2\" class=\"data row5 col2\" >17</td>\n",
+       "      <td id=\"T_b27de_row5_col3\" class=\"data row5 col3\" >3.900000</td>\n",
+       "      <td id=\"T_b27de_row5_col4\" class=\"data row5 col4\" >3815</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_89279_level0_row6\" class=\"row_heading level0 row6\" >945</th>\n",
-       "      <td id=\"T_89279_row6_col0\" class=\"data row6 col0\" >5998.000000</td>\n",
-       "      <td id=\"T_89279_row6_col1\" class=\"data row6 col1\" >7999.000000</td>\n",
-       "      <td id=\"T_89279_row6_col2\" class=\"data row6 col2\" >25</td>\n",
-       "      <td id=\"T_89279_row6_col3\" class=\"data row6 col3\" >4.200000</td>\n",
-       "      <td id=\"T_89279_row6_col4\" class=\"data row6 col4\" >30355</td>\n",
+       "      <th id=\"T_b27de_level0_row6\" class=\"row_heading level0 row6\" >31</th>\n",
+       "      <td id=\"T_b27de_row6_col0\" class=\"data row6 col0\" >179.000000</td>\n",
+       "      <td id=\"T_b27de_row6_col1\" class=\"data row6 col1\" >499.000000</td>\n",
+       "      <td id=\"T_b27de_row6_col2\" class=\"data row6 col2\" >64</td>\n",
+       "      <td id=\"T_b27de_row6_col3\" class=\"data row6 col3\" >4.000000</td>\n",
+       "      <td id=\"T_b27de_row6_col4\" class=\"data row6 col4\" >1934</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_89279_level0_row7\" class=\"row_heading level0 row7\" >386</th>\n",
-       "      <td id=\"T_89279_row7_col0\" class=\"data row7 col0\" >15490.000000</td>\n",
-       "      <td id=\"T_89279_row7_col1\" class=\"data row7 col1\" >20990.000000</td>\n",
-       "      <td id=\"T_89279_row7_col2\" class=\"data row7 col2\" >26</td>\n",
-       "      <td id=\"T_89279_row7_col3\" class=\"data row7 col3\" >4.200000</td>\n",
-       "      <td id=\"T_89279_row7_col4\" class=\"data row7 col4\" >32916</td>\n",
+       "      <th id=\"T_b27de_level0_row7\" class=\"row_heading level0 row7\" >599</th>\n",
+       "      <td id=\"T_b27de_row7_col0\" class=\"data row7 col0\" >1220.000000</td>\n",
+       "      <td id=\"T_b27de_row7_col1\" class=\"data row7 col1\" >3990.000000</td>\n",
+       "      <td id=\"T_b27de_row7_col2\" class=\"data row7 col2\" >69</td>\n",
+       "      <td id=\"T_b27de_row7_col3\" class=\"data row7 col3\" >4.100000</td>\n",
+       "      <td id=\"T_b27de_row7_col4\" class=\"data row7 col4\" >107151</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_89279_level0_row8\" class=\"row_heading level0 row8\" >446</th>\n",
-       "      <td id=\"T_89279_row8_col0\" class=\"data row8 col0\" >15490.000000</td>\n",
-       "      <td id=\"T_89279_row8_col1\" class=\"data row8 col1\" >20990.000000</td>\n",
-       "      <td id=\"T_89279_row8_col2\" class=\"data row8 col2\" >26</td>\n",
-       "      <td id=\"T_89279_row8_col3\" class=\"data row8 col3\" >4.200000</td>\n",
-       "      <td id=\"T_89279_row8_col4\" class=\"data row8 col4\" >32916</td>\n",
+       "      <th id=\"T_b27de_level0_row8\" class=\"row_heading level0 row8\" >1438</th>\n",
+       "      <td id=\"T_b27de_row8_col0\" class=\"data row8 col0\" >6790.000000</td>\n",
+       "      <td id=\"T_b27de_row8_col1\" class=\"data row8 col1\" >10995.000000</td>\n",
+       "      <td id=\"T_b27de_row8_col2\" class=\"data row8 col2\" >38</td>\n",
+       "      <td id=\"T_b27de_row8_col3\" class=\"data row8 col3\" >4.500000</td>\n",
+       "      <td id=\"T_b27de_row8_col4\" class=\"data row8 col4\" >3192</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_89279_level0_row9\" class=\"row_heading level0 row9\" >865</th>\n",
-       "      <td id=\"T_89279_row9_col0\" class=\"data row9 col0\" >2499.000000</td>\n",
-       "      <td id=\"T_89279_row9_col1\" class=\"data row9 col1\" >9999.000000</td>\n",
-       "      <td id=\"T_89279_row9_col2\" class=\"data row9 col2\" >75</td>\n",
-       "      <td id=\"T_89279_row9_col3\" class=\"data row9 col3\" >4.000000</td>\n",
-       "      <td id=\"T_89279_row9_col4\" class=\"data row9 col4\" >9090</td>\n",
+       "      <th id=\"T_b27de_level0_row9\" class=\"row_heading level0 row9\" >395</th>\n",
+       "      <td id=\"T_b27de_row9_col0\" class=\"data row9 col0\" >2299.000000</td>\n",
+       "      <td id=\"T_b27de_row9_col1\" class=\"data row9 col1\" >7990.000000</td>\n",
+       "      <td id=\"T_b27de_row9_col2\" class=\"data row9 col2\" >71</td>\n",
+       "      <td id=\"T_b27de_row9_col3\" class=\"data row9 col3\" >4.200000</td>\n",
+       "      <td id=\"T_b27de_row9_col4\" class=\"data row9 col4\" >69622</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x25dfd441d10>"
+       "<pandas.io.formats.style.Styler at 0x1eee7a86f50>"
       ]
      },
      "execution_count": 8,
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "dc0a062b",
    "metadata": {},
    "outputs": [
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "12176e4f",
    "metadata": {},
    "outputs": [],
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "784df305",
    "metadata": {},
    "outputs": [
@@ -950,7 +950,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "866104e1",
    "metadata": {},
    "outputs": [
@@ -981,7 +981,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "2bd83b22",
    "metadata": {},
    "outputs": [
@@ -1012,7 +1012,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "d345acf1",
    "metadata": {},
    "outputs": [
@@ -1043,7 +1043,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "4463c2f7",
    "metadata": {},
    "outputs": [
@@ -1077,7 +1077,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[27], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mplt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbar\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnum_df\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[15], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mplt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbar\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnum_df\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[1;31mTypeError\u001b[0m: bar() missing 1 required positional argument: 'height'"
      ]
     }
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "7f00bb3c",
    "metadata": {},
    "outputs": [
@@ -1099,7 +1099,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "27d4c1f3",
    "metadata": {},
    "outputs": [
@@ -1130,7 +1130,7 @@
        "<Axes: ylabel='Count'>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "282b5b61",
    "metadata": {},
    "outputs": [
@@ -1209,7 +1209,7 @@
        "rating_count                     0.01068       1.00000"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1217,6 +1217,14 @@
    "source": [
     "num_df[['discount_percentage', 'rating_count']].corr(method='pearson')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "155757a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
